--- a/Resources/UserGuides/managingTheMainForm.html
+++ b/Resources/UserGuides/managingTheMainForm.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -84,43 +84,49 @@
 движения транспорта на автодороге» </h1>
         </div>
         <div id="line_block2">
- 
-            
             <button class="button" onclick="window.location.href = 'roadTypeInfo.html';">О выборе типа дороги</button>
             <button class="button" onclick="window.location.href = 'countOfRoadsInfo.html';">О выборе количества полос</button>
-            <button class="button" onclick="window.location.href = 'flowIntensitySettings.html';">О выборе интенсивности потока</button>
             <button class="button" onclick="window.location.href = 'trafficLightsSettings.html';">О настройке светофора</button>
+            <button class="button" onclick="window.location.href = 'flowIntensitySettings.html';">О выборе интенсивности потока</button>
             <button class="button" onclick="window.location.href = 'speedSettings.html';">О выборе распределения скоростного режима</button>
-            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">О управлении главной формой</button> 
-			<button class="button" onclick="window.location.href = 'systemInfo.html';">О системе и авторах</button>
-              </div>
-        <div id="line_block" >
-		<h2>Управление главной формой</h2>
-		<p align="justify">Ниже представлена главная форма проекта</p>
-		<img class="Image" src="Images/главная форма.jpg">
-		<h3>Основное меню управления моделированием</h3>
+            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">О управлении главной формой</button>
+            <button class="button" onclick="window.location.href = 'systemInfo.html';">О системе и авторах</button>
+        </div>
+        <div id="line_block">
+            <h2>Управление главной формой</h2>
+            <p align="justify">Ниже представлена главная форма проекта</p>
+            <img class="Image" src="Images/главная форма.jpg">
+            <p align="center">Рисунок 1 — Главная форма проекта</p><br>
+            <h3>Основное меню управления моделированием</h3>
             <p align="justify">На этой форме визуализируется транспортный поток.</p>
-            <p align="justify">Чтобы начать моделирование намите кнопку 'Старт'</p>  
-            <p align="justify">Чтобы приостановить моделирование намите кнопку 'Пауза'</p> 
-            <p align="justify">Чтобы остановить моделирование и открыть настроечный экран нажмите 'Остановить'</p> 
+            <p align="justify">Чтобы начать моделирование намите кнопку 'Старт'</p>
+            <p align="justify">Чтобы приостановить моделирование намите кнопку 'Пауза'</p>
+            <p align="justify">Чтобы остановить моделирование и открыть настроечный экран нажмите 'Остановить'</p>
             <h3>Управление головным автомобилем</h3>
-			<p align="justify">Чтобы изменить скорость головного автомобиля, данная функция доступна в тоннеле, необходимо кликом выбрать авто,
-			после чего он подсветится красным цветом, а затем задать желаемую скорость с помощью ползунка.</p> 
-			<img class="Image" src="Images/управление головным авто.jpg">
-			<h3>Управление знаками дорожного движения</h3>
-            <p align="justify">Чтобы на дороге ставить/удалять знаки, необходимо нажать кнопку 'Редактировать ЗДД', данная функция есть на дороге и автостраде, 
-			после чего выбрать желаемое действие из предложенных вариантов. В случае выбора ограничения скорости, 
-			надо настроить ползунком желаемое ограничение скорости. После редактирования ЗДД, надо нажать кнопку 
-			'Старт', чтобы продолжить процесс моделирования.</p> 
-            <p align="justify">На изображении ниже показаны элементы управления, используемые для установки знаков.</p> 
-            <p align="justify">1 - Кнопка открытия меню знаков.</p> 
-            <p align="justify">2 - Меню с выбором действия, поставить ограничение/отменить ограничение/удалить знак.</p> 
-            <p align="justify">3 - Поставленные знаки.</p> 
-            <p align="justify">4 - Курсор удаления знака, при клике по поставленному знаку, удаляет его.</p> 
-			 <img class="Image" src="Images/расстановка знаков.jpg">
-             <p align="justify">Ниже показана работа знаков ограничения скорости, машины сбавляют скорость, находясь под действием знака и разгоняются, после знака отмены ограничений.</p> 
-			 <img class="Image" src="Images/работа знаков ограничения скорости.jpg">
-             
+            <p align="justify">
+                Чтобы изменить скорость головного автомобиля, данная функция доступна в тоннеле, необходимо кликом выбрать авто,
+                после чего он подсветится красным цветом, а затем задать желаемую скорость с помощью ползунка.
+            </p>
+            <img class="Image" src="Images/управление головным авто.jpg">
+            <p align="center">Рисунок 2 — Управление скоростью головного автомобиля</p><br>
+            <h3>Управление знаками дорожного движения</h3>
+            <p align="justify">
+                Чтобы на дороге ставить/удалять знаки, необходимо нажать кнопку 'Редактировать ЗДД', данная функция есть на дороге и автостраде,
+                после чего выбрать желаемое действие из предложенных вариантов. В случае выбора ограничения скорости,
+                надо настроить ползунком желаемое ограничение скорости. После редактирования ЗДД, надо нажать кнопку
+                'Старт', чтобы продолжить процесс моделирования.
+            </p>
+            <p align="justify">На изображении ниже показаны элементы управления, используемые для установки знаков.</p>
+            <p align="justify">1 — Кнопка открытия меню знаков.</p>
+            <p align="justify">2 — Меню с выбором действия, поставить ограничение/отменить ограничение/удалить знак.</p>
+            <p align="justify">3 — Поставленные знаки.</p>
+            <p align="justify">4 — Курсор удаления знака, при клике по поставленному знаку, удаляет его.</p>
+            <img class="Image" src="Images/расстановка знаков.jpg">
+            <p align="center">Рисунок 3 — Расстановка дорожных знаков</p><br>
+            <p align="justify">Ниже показана работа знаков ограничения скорости, машины сбавляют скорость, находясь под действием знака и разгоняются, после знака отмены ограничений.</p>
+            <img class="Image" src="Images/работа знаков ограничения скорости.jpg">
+            <p align="center">Рисунок 4 — Работа можели со знаками ограничения скорости</p><br>
+
         </div>
         </div>
 </div>
