--- a/Resources/UserGuides/roadTypeInfo.html
+++ b/Resources/UserGuides/roadTypeInfo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -83,29 +83,34 @@
 
 движения транспорта на автодороге» </h1>
         </div>
-        <div id="line_block2"> 
+        <div id="line_block2">
             <button class="button" onclick="window.location.href = 'roadTypeInfo.html';">О выборе типа дороги</button>
             <button class="button" onclick="window.location.href = 'countOfRoadsInfo.html';">О выборе количества полос</button>
-            <button class="button" onclick="window.location.href = 'flowIntensitySettings.html';">О выборе интенсивности потока</button>
             <button class="button" onclick="window.location.href = 'trafficLightsSettings.html';">О настройке светофора</button>
+            <button class="button" onclick="window.location.href = 'flowIntensitySettings.html';">О выборе интенсивности потока</button>
             <button class="button" onclick="window.location.href = 'speedSettings.html';">О выборе распределения скоростного режима</button>
-            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">О управлении главной формой</button> 
-			<button class="button" onclick="window.location.href = 'systemInfo.html';">О системе и авторах</button>
-              </div> 
-        <div id="line_block" >
-		<h2>Выбор типа дороги</h2>
-            <p align="justify">На форме следует выбрать один из трех типов дороги и нажать кнопку 'Далее', чтобы открыть следующее окно настроек.</p>
-            <p align="justify">Выбор состоит из трех типов дороги:</p> 
-			<h3>Дорога</h3> 
-			<p align="justify">Дорога представляет собой совокупность полос с односторонним или двусторонним двиением с ограничением скорости 90 Км/ч.</p>
-			<img class="Image" src="Images/Road.jpg"> 
-			<h3>Тоннель</h3>
-			<p align="justify">Тоннель представляет собой узкий участок дороги, где в реверсивном движении движутся две полосы, резулируемые настраиваемым светофором. Ограничением скорости 60 Км/ч.</p>
-			<img class="Image" src="Images/Tonnel.jpg">
-			<h3>Автострада</h3>   
-			<p align="justify">Автострада представляет собой совокупность полос с односторонним или двусторонним двиением с ограничением скорости 110 Км/ч.</p>
-			<img class="Image" src="Images/Highway.jpg">
- 
+            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">О управлении главной формой</button>
+            <button class="button" onclick="window.location.href = 'systemInfo.html';">О системе и авторах</button>
+        </div> 
+        <div id="line_block">
+            <h2>Выбор типа дороги</h2>
+            <p align="justify">На рисунке 1 представлена форма, на которой следует выбрать один из трех типов дороги и нажать кнопку 'Далее', чтобы открыть следующее окно настроек.</p>
+            <img class="Image" src="Images/форма выбора типа дороги.jpg">
+            <p align="center">Рисунок 1 — Форма выбора типа дороги</p><br>
+            <p align="justify">Выбор состоит из трех типов дороги:</p>
+            <h3>Дорога</h3>
+            <p align="justify">Дорога представляет собой совокупность полос с односторонним или двусторонним двиением с ограничением скорости 60 Км/ч.</p>
+            <img class="Image" src="Images/Road.jpg">
+            <p align="center">Рисунок 2 — Модель односторонней дороги</p><br>
+                                                                         <h3>Тоннель</h3>
+            <p align="justify">Тоннель представляет собой узкий участок дороги, где в реверсивном движении движутся две полосы, резулируемые настраиваемым светофором. Ограничением скорости 60 Км/ч.</p>
+            <img class="Image" src="Images/Tonnel.jpg">
+            <p align="center">Рисунок 3 — Модель тоннеля</p><br>
+                                                            <h3>Автомагистраль</h3>
+            <p align="justify">Автомагистраль представляет собой совокупность полос с односторонним или двусторонним двиением с ограничением скорости 110 Км/ч.</p>
+            <img class="Image" src="Images/Highway.jpg">
+            <p align="center">Рисунок 4 — Модель автомагистрали</p><br>
+
         </div>
         </div>
 </div>
