--- a/Resources/UserGuides/systemInfo.html
+++ b/Resources/UserGuides/systemInfo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -74,16 +74,14 @@
 движения транспорта на автодороге» </h1>
         </div>
         <div id="line_block2">
- 
-            
             <button class="button" onclick="window.location.href = 'roadTypeInfo.html';">О выборе типа дороги</button>
             <button class="button" onclick="window.location.href = 'countOfRoadsInfo.html';">О выборе количества полос</button>
-            <button class="button" onclick="window.location.href = 'flowIntensitySettings.html';">О выборе интенсивности потока</button>
             <button class="button" onclick="window.location.href = 'trafficLightsSettings.html';">О настройке светофора</button>
+            <button class="button" onclick="window.location.href = 'flowIntensitySettings.html';">О выборе интенсивности потока</button>
             <button class="button" onclick="window.location.href = 'speedSettings.html';">О выборе распределения скоростного режима</button>
-            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">О управлении главной формой</button> 
-			<button class="button" onclick="window.location.href = 'systemInfo.html';">О системе и авторах</button>
-              </div>
+            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">О управлении главной формой</button>
+            <button class="button" onclick="window.location.href = 'systemInfo.html';">О системе и авторах</button>
+        </div>
         <div id="line_block" >
 		<h2>О системе и авторах</h2> 
 		<p align="center">Самарский университет</p> 
