--- a/Resources/UserGuides/trafficLightsSettings.html
+++ b/Resources/UserGuides/trafficLightsSettings.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -74,23 +74,24 @@
 движения транспорта на автодороге» </h1>
         </div>
         <div id="line_block2">
- 
-            
             <button class="button" onclick="window.location.href = 'roadTypeInfo.html';">О выборе типа дороги</button>
             <button class="button" onclick="window.location.href = 'countOfRoadsInfo.html';">О выборе количества полос</button>
-            <button class="button" onclick="window.location.href = 'flowIntensitySettings.html';">О выборе интенсивности потока</button>
             <button class="button" onclick="window.location.href = 'trafficLightsSettings.html';">О настройке светофора</button>
+            <button class="button" onclick="window.location.href = 'flowIntensitySettings.html';">О выборе интенсивности потока</button>
             <button class="button" onclick="window.location.href = 'speedSettings.html';">О выборе распределения скоростного режима</button>
-            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">О управлении главной формой</button> 
-			<button class="button" onclick="window.location.href = 'systemInfo.html';">О системе и авторах</button>
-              </div>
-        <div id="line_block" >
-		<h2>Настройка светофоров в тоннеле</h2>
-            <p align="justify">Ниже представлена форма настройка периода зеленой фазы светофоров реверсивного движения.</p> 
-			<img class="Image" src="Images/форма настройки светофорной фазы.jpg">
-			<p align="justify">На форме присутствует ползунок, который позволяет здать длительность светофорной фазы.</p>
-			<p align="justify">При нажатии кнопки 'Назад' текущее окно закроется и откроется 
-			форма выбора типа дороги. При нажатии кнопки 'Далее' будет открыта форма выбора распределения интенсивности потока.</p>  
+            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">О управлении главной формой</button>
+            <button class="button" onclick="window.location.href = 'systemInfo.html';">О системе и авторах</button>
+        </div>
+        <div id="line_block">
+            <h2>Настройка светофоров в тоннеле</h2>
+            <p align="justify">Ниже представлена форма настройка периода зеленой фазы светофоров реверсивного движения.</p>
+            <img class="Image" src="Images/форма настройки светофорной фазы.jpg">
+            <p align="center">Рисунок 1 — Форма настройки светофорной фазы</p><br>
+            <p align="justify">На форме присутствует ползунок, который позволяет здать длительность светофорной фазы.</p>
+            <p align="justify">
+                При нажатии кнопки 'Назад' текущее окно закроется и откроется
+                форма выбора типа дороги. При нажатии кнопки 'Далее' будет открыта форма выбора распределения интенсивности потока.
+            </p>
         </div>
         </div>
 </div>
